cli/tests/snapshots/cli__repl_error_over_a_definition_head.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Duplicate definition
  ┌─ <repl>:1:14
  │
1 │ fn f() { 1 } fn f() { 2 }
  │ ------       ^^^^^^ Redefined here
  │ │             
  │ First defined here

`f` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
