cli/tests/snapshots/cli__repl_error_syntax.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Syntax error
  ┌─ <repl>:1:7
  │
1 │ let x = )
  │       ^ I was expecting a value after this
