cli/tests/snapshots/cli__repl_error_type.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Unknown type
  ┌─ /src/repl1_1.gleam:1:12
  │
1 │ type T { T(Nope) }
  │            ^^^^

The type `Nope` is not defined or imported in this module.
