cli/tests/snapshots/cli__repl_error_type_beside_type.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&err)
---
error: Type used as a type constructor
  ┌─ <repl>:1:13
  │
1 │ type B { B(A(Int)) }
  │             ^^^^^ You can remove this

`A` is a type with no parameters, but here it's being used as a type
constructor.
