cli/tests/snapshots/cli__repl_import_alias_shadows_module.snap
---
source: cli/tests/cli.rs
expression: "repl_exec(&formatdoc!\n{r#\"\n        io.println(\"before\")\n        import gleam/int as io\n        io.to_string(1)\"#})"
---
before
Nil
"1"
