cli/tests/snapshots/cli__repl_import_const_shadows_unqualified.snap
---
source: cli/tests/cli.rs
expression: "repl_exec(&formatdoc!\n{r#\"\n        import gleam/int.{{to_string}}\n        to_string(1)\n        const to_string = \"hi\"\n        to_string\"#})"
---
"1"
"hi"
