cli/tests/snapshots/cli__repl_import_re_import_restores_name.snap
---
source: cli/tests/cli.rs
expression: "repl_exec(&formatdoc!\n{r#\"\n        import gleam/io.{{println}}\n        import sgleam/io\n        import gleam/io\n        io.println(\"hello\")\"#})"
---
hello
Nil
