cli/tests/snapshots/cli__repl_import_shadow_debug.snap
---
source: cli/tests/cli.rs
expression: strip_repl_suffix(&out)
---
Debug mode on.
--- repl1_1.gleam ---
@external(javascript, "./sgleam/sgleam_ffi.mjs", "repl_save")
pub fn repl_save_XXXXXXXX(value: a) -> a

@external(javascript, "./sgleam/sgleam_ffi.mjs", "repl_load")
pub fn repl_load_XXXXXXXX(index: Int) -> a

@external(javascript, "./sgleam/sgleam_ffi.mjs", "repl_print")
pub fn repl_print_XXXXXXXX(value: a) -> a

import sgleam/io
---
--- repl1_1.mjs ---
import * as $io from "./sgleam/io.mjs";
import {
  repl_save as repl_save_XXXXXXXX,
  repl_load as repl_load_XXXXXXXX,
  repl_print as repl_print_XXXXXXXX,
} from "./sgleam/sgleam_ffi.mjs";

export { repl_load_XXXXXXXX, repl_print_XXXXXXXX, repl_save_XXXXXXXX };
---
--- repl2_1.gleam ---
@external(javascript, "./sgleam/sgleam_ffi.mjs", "repl_save")
pub fn repl_save_XXXXXXXX(value: a) -> a

@external(javascript, "./sgleam/sgleam_ffi.mjs", "repl_load")
pub fn repl_load_XXXXXXXX(index: Int) -> a

@external(javascript, "./sgleam/sgleam_ffi.mjs", "repl_print")
pub fn repl_print_XXXXXXXX(value: a) -> a

import sgleam/io

pub fn repl_main_XXXXXXXX() {
  repl_print_XXXXXXXX({ io.input("") <> "ok" })
}
---
--- repl2_1.mjs ---
import * as $io from "./sgleam/io.mjs";
import {
  repl_save as repl_save_XXXXXXXX,
  repl_load as repl_load_XXXXXXXX,
  repl_print as repl_print_XXXXXXXX,
} from "./sgleam/sgleam_ffi.mjs";

export { repl_load_XXXXXXXX, repl_print_XXXXXXXX, repl_save_XXXXXXXX };

export function repl_main_XXXXXXXX() {
  return repl_print_XXXXXXXX(($io.input("") + "ok"));
}
---
"ok"
